Updated flow for site ownership questions

--- a/app/views/appellant-submission/v11/full/appeal-documents/supporting-documents.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/supporting-documents.html
@@ -69,7 +69,7 @@
         }) }} 
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
