--- a/app/views/appellant-submission/v11/full/appeal-site/own-land.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/own-land.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-   - Before you start - {{serviceName}} - GOV.UK
+  Do you own all the land involved in the appeal? - Tell us about the appeal site - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,22 +28,12 @@
           Tell us about the appeal site
         </span>
 
-        {% if (data["appealsub-"+version+"-appealsite-siterelationship"] == "I own part of the appeal site") %}
-          {% set headingHtml %}
-            Have you told all the other owners about your appeal?
-          {% endset -%}
-        {% else %}
-          {% set headingHtml %}
-            Have you told all the owners you know about your appeal?
-          {% endset -%}
-        {% endif %}
-
         {{ govukRadios({
-          idPrefix: "appealsub-"+version+"-appealsite-otherownerstold",
-          name: "appealsub-"+version+"-appealsite-otherownerstold",
+          idPrefix: "appealsub-"+version+"-appealsite-ownland",
+          name: "appealsub-"+version+"-appealsite-ownland",
           fieldset: {
             legend: {
-              text: headingHtml,
+              text: "Do you own all the land involved in the appeal?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
@@ -52,18 +42,19 @@
             {
               value: "Yes",
               text: "Yes",
-              checked: checked("appealsub-"+version+"-appealsite-otherownerstold", "Yes")
+              checked: checked("appealsub-"+version+"-appealsite-ownland", "Yes")
             },
             {
               value: "No",
               text: "No",
-              checked: checked("appealsub-"+version+"-appealsite-otherownerstold", "No")
+              checked: checked("appealsub-"+version+"-appealsite-ownland", "No")
             }
           ]
         }) }}
 
+
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
