--- a/app/views/appellant-submission/v11/full/check-your-answers.html
+++ b/app/views/appellant-submission/v11/full/check-your-answers.html
@@ -360,7 +360,7 @@
 
         {{ govukButton({
           href: "declaration",
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
