--- a/app/views/appellant-submission/v11/full/contact-details/applicant-name.html
+++ b/app/views/appellant-submission/v11/full/contact-details/applicant-name.html
@@ -47,7 +47,7 @@
         </p>
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
