--- a/app/views/appellant-submission/v11/full/contact-details/your-details.html
+++ b/app/views/appellant-submission/v11/full/contact-details/your-details.html
@@ -89,7 +89,7 @@
         
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
