--- a/app/views/appellant-submission/v11/full/planning-application-documents/application-upload.html
+++ b/app/views/appellant-submission/v11/full/planning-application-documents/application-upload.html
@@ -67,7 +67,7 @@
         }) }}     
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
