--- a/app/views/appellant-submission/v11/full/appeal-documents/additional-documents.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/additional-documents.html
@@ -57,7 +57,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
