--- a/app/views/appellant-submission/v11/full/appeal-documents/appeal-statement.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/appeal-statement.html
@@ -126,7 +126,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
