--- a/app/views/appellant-submission/v11/full/planning-application-documents/application-number.html
+++ b/app/views/appellant-submission/v11/full/planning-application-documents/application-number.html
@@ -44,7 +44,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
