--- a/app/views/appellant-submission/v11/full/appeal-site/knows-some/tell-landowners.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/knows-some/tell-landowners.html
@@ -37,7 +37,7 @@
         {% if data["appealsub-"+version+"-appealsite-ownsome"] == "Yes" %}
 
           <h1 class="govuk-heading-l">Telling the other landowners</h1>
-          <p class="govuk-body">You must have told all the other landowners about your appeal.</p>
+          <p class="govuk-body">You must have told the landowners you do know about your appeal.</p>
           <p class="govuk-body">You must have done this within the last 21 days using a copy of <a href="javascript:preventDefault();">the form in annexe 2A or 2B of the 'making your appeal' guidance</a>.</p>
 
           <h2 class="govuk-heading-m">Confirm that you've told the other landowners</h2>
@@ -68,7 +68,7 @@
         {% else %}
 
           <h1 class="govuk-heading-l">Telling the landowners</h1>
-          <p class="govuk-body">You must have told all the landowners about your appeal.</p>
+          <p class="govuk-body">You must  have told the landowners you do know about your appeal.</p>
           <p class="govuk-body">You must have done this within the last 21 days using a copy of <a href="javascript:preventDefault();">the form in annexe 2A or 2B of the 'making your appeal' guidance</a>.</p>
 
           <h2 class="govuk-heading-m">Confirm that you've told the landowners</h2>
