Change to page title of home page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Prototype list
+  Prototypes for {{ serviceName }}
 {% endblock %}
 
 {% block content %}
