Content updates for before you start CYA

--- a/app/views/appellant-submission/v11/full/appeal-site/knows-none/identifying-landowners.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/knows-none/identifying-landowners.html
@@ -32,7 +32,6 @@
 
           <h1 class="govuk-heading-l">Identifying the other landowners</h1>
           <p class="govuk-body">You must have taken all reasonable steps to identify the other landowners.</p>
-          
 
           <h2 class="govuk-heading-m">Have you taken all reasonable steps to identify the other landowners?</h2>
 
@@ -41,9 +40,9 @@
             name: "appealsub-"+version+"-appealsite-knowsome-identifying",
             items: [
               {
-                value: " Yes, I confirm that I've taken all reasonable steps to identify the landowners.",
-                text: "Yes, I confirm that I've taken all reasonable steps to identify the landowners.",
-                checked: checked("appealsub-"+version+"-appealsite-knowsome-identifying", "Yes, I confirm that I've taken all reasonable steps to identify the landowners.")
+                value: "I confirm that I've taken all reasonable steps to identify the landowners.",
+                text: "I confirm that I've taken all reasonable steps to identify the landowners.",
+                checked: checked("appealsub-"+version+"-appealsite-knowsome-identifying", "I confirm that I've taken all reasonable steps to identify the landowners.")
               }
             ]
           }) }}
@@ -52,7 +51,6 @@
 
           <h1 class="govuk-heading-l">Identifying the landowners</h1>
           <p class="govuk-body">You must have taken all reasonable steps to identify the landowners.</p>
-          
 
           <h2 class="govuk-heading-m">Have you taken all reasonable steps to identify the landowners?</h2>
 
@@ -61,9 +59,9 @@
             name: "appealsub-"+version+"-appealsite-knownone-identifying",
             items: [
               {
-                value: "Yes, I confirm that I've taken all reasonable steps to identify the landowners.",
-                text: "Yes, I confirm that I've taken all reasonable steps to identify the landowners.",
-                checked: checked("appealsub-"+version+"-appealsite-knownone-identifying", "Yes, I confirm that I've taken all reasonable steps to identify the landowners.")
+                value: "I confirm that I've taken all reasonable steps to identify the landowners.",
+                text: "I confirm that I've taken all reasonable steps to identify the landowners.",
+                checked: checked("appealsub-"+version+"-appealsite-knownone-identifying", "I confirm that I've taken all reasonable steps to identify the landowners.")
               }
             ]
           }) }}
