--- a/app/views/appellant-submission/v11/full/appeal-site/knows-some/identifying-landowners.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/knows-some/identifying-landowners.html
@@ -39,16 +39,15 @@
           </ul>
 
           <h2 class="govuk-heading-m">Confirm that you have attempted to identify the other landowners</h2>
-          <p class="govuk-body">I confirm that:</p>
 
           {{ govukCheckboxes({
             idPrefix: "appealsub-"+version+"-appealsite-knowsome-identifying",
             name: "appealsub-"+version+"-appealsite-knowsome-identifying",
             items: [
               {
-                value: "Yes, I confirm that I've attempted to identify all the other landowners, but have not been successful.",
-                text: "Yes, I confirm that I've attempted to identify all the other landowners, but have not been successful.",
-                checked: checked("appealsub-"+version+"-appealsite-knowsome-identifying", "Yes, I confirm that I've attempted to identify all the other landowners, but have not been successful.")
+                value: "I confirm that I've attempted to identify all the other landowners, but have not been successful.",
+                text: "I confirm that I've attempted to identify all the other landowners, but have not been successful.",
+                checked: checked("appealsub-"+version+"-appealsite-knowsome-identifying", "I confirm that I've attempted to identify all the other landowners, but have not been successful.")
               }
             ]
           }) }}
@@ -64,16 +63,15 @@
           </ul>
 
           <h2 class="govuk-heading-m">Confirm that you have attempted to identify the landowners</h2>
-          <p class="govuk-body">I confirm that:</p>
 
           {{ govukCheckboxes({
             idPrefix: "appealsub-"+version+"-appealsite-knowsome-identifying",
             name: "appealsub-"+version+"-appealsite-knowsome-identifying",
             items: [
               {
-                value: "Yes, I confirm that I've attempted to identify all the landowners, but have not been successful.",
-                text: "Yes, I confirm that I've attempted to identify all the landowners, but have not been successful.",
-                checked: checked("appealsub-"+version+"-appealsite-knowsome-identifying", "Yes, I confirm that I've attempted to identify all the landowners, but have not been successful.")
+                value: "I confirm that I've attempted to identify all the landowners, but have not been successful.",
+                text: "I confirm that I've attempted to identify all the landowners, but have not been successful.",
+                checked: checked("appealsub-"+version+"-appealsite-knowsome-identifying", "I confirm that I've attempted to identify all the landowners, but have not been successful.")
               }
             ]
           }) }}
