--- a/app/views/appellant-submission/v11/before-you-start/check-answers.html
+++ b/app/views/appellant-submission/v11/before-you-start/check-answers.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Check what you've told us about your appeal  - Before you start - {{serviceName}} - GOV.UK
+  You're eligible to appeal using this service - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,12 +23,20 @@
     <div class="govuk-grid-column-two-thirds">
 
       <form action="" method="post">
-
-        <span class="govuk-caption-l">
-          Before you start
-        </span>
+      
         <h1 class="govuk-heading-l">
-          Check what you've told us about your appeal
+          You're eligible to appeal using this service
+        </h1>
+
+        <p class="govuk-body">
+          Based on your answers, you're eligible to appeal using this service.
+        </p>
+        <p class="govuk-body">
+          Based on what you've told us, your deadline to submit your appeal is 11.59pm on Monday {{ data["appealsub-"+version+"-beforeyoustart-deadline-day"] }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-year"] }}.
+        </p>
+      
+        <h1 class="govuk-heading-m">
+          Check your answers
         </h1>
 
         <dl class="govuk-summary-list">
@@ -145,26 +153,43 @@
           </summary>
           <div class="govuk-details__text">
             <p class="govuk-body">
-              You need certain documents to complete your appeal:
+              You need to submit these documents with your appeal:
             </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>the decision letter from your local planning department</li>
-              <li>your appeal statement</li>
               <li>your planning application form</li>
+              {% if data["appealsub-"+version+"-beforeyoustart-permissiongrantedrefused"] != "I have not received a decision" %}
+                <li>the decision letter from your local planning department</li>
+              {% endif %}
+              <li>your design and access statement, if you submitted one with your application</li>
+              <li>your appeal statement</li>
             </ul>
             <p class="govuk-body">
               If you do not have a copy of your planning application form, you can search for it on your local planning department's website.
             </p>
+            <p class="govuk-body">
+              You also have the option to submit:
+            </p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>plans or drawings that have been updated or created since your application</li>
+              <li>any other documents that you'd like to submit in support of your appeal</li>
+            </ul>
+            <p class="govuk-body">
+              You do not need to submit the plans or drawings you submitted with your application. We will get these from the local planning department.
+            </p>
           </div>
         </details>
 
-        <p class="govuk-body">
-          Based on what you've told us, your deadline to submit your appeal is 11.59pm on Monday {{ data["appealsub-"+version+"-beforeyoustart-deadline-day"] }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-month"] | formatMonth }} {{ data["appealsub-"+version+"-beforeyoustart-deadline-year"] }}.
-        </p>
-
-        {{ govukButton({
-          text: "Continue to my appeal"
-        }) }}
+        {% if data['appealsub-'+version+'-route'] == "full" %}
+          {{ govukButton({
+            text: "Continue to my appeal",
+            href: "/appellant-submission/"+version+"/full/task-list"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue to my appeal",
+            href: "/appellant-submission/"+version+"/householder/task-list"
+          }) }}
+        {% endif %}
 
       </form>
 
