--- a/app/views/appellant-submission/v11/full/contact-details/your-details.html
+++ b/app/views/appellant-submission/v11/full/contact-details/your-details.html
@@ -51,6 +51,7 @@
           hint: {
             html: hintHtml
           },
+          classes: "govuk-!-width-two-thirds",
           value: data["appealsub-"+version+"-aboutyou-yourname"]
         }) }}
         
@@ -60,6 +61,7 @@
           label: {
             text: "Company name (optional)"
           },
+          classes: "govuk-!-width-two-thirds",
           value: data["appealsub-"+version+"-aboutyou-company"]
         }) }}
         
@@ -83,7 +85,7 @@
           name: "appealsub-"+version+"-aboutyou-telephone",
           type: "tel",
           autocomplete: "tel",
-          classes: "govuk-input--width-20",
+          classes: "govuk-input--width-10",
           value: data["appealsub-"+version+"-aboutyou-telephone"]
         }) }}
         
