--- a/app/views/inspector/v5/book-visit/date-time.html
+++ b/app/views/inspector/v5/book-visit/date-time.html
@@ -13,7 +13,7 @@
   }) }}
   {{ govukBackLink({
     text: "Back",
-    href: "/inspector/"+version+"/appeal-unscheduled"
+    href: "/inspector/"+version+"/book-visit"
   }) }}
 {% endblock %}
 
@@ -35,55 +35,92 @@
       </aside>
     </div>
 
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-one-half">
+
+      <h2 class="govuk-heading-l">
+        {{ data["inspector-"+version+"-schedule-type"] }} site visit details
+      </h2>
+      
+      {% if data["inspector-"+version+"-schedule-type"] == "Access required" %}
+        <p class="govuk-body">
+          [tell inspector that these details will be used to go into the letter to the appellant]
+        </p>
+      {% else %}
+        <p class="govuk-body">
+          [tell inspector that these details will only be used internally]
+        </p>
+      {% endif %}
 
       <form action="" method="post">
-   
-        <!-- loop through data from availableAppeals.json -->
-        {% for item in data['availableAppeals'] %}
-          <!-- match selected appeal by ref in data and show -->
-          {% if item.ref == data["inspector-"+version+"-currentappeal"] %}
 
-            <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                  Type of site visit
-                </legend>
-                <div class="govuk-radios">
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="inspector-{{version}}-schedule-type" name="inspector-{{version}}-schedule-type" type="radio" value="Access required"{% if item.proposedVisitType == "Access required" %} checked{% endif %}>
-                    <label class="govuk-label govuk-radios__label" for="inspector-{{version}}-schedule-type">
-                      Access required
-                      {% if item.proposedVisitType == "Access required" %}
-                        <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-3">Provisional type</strong>
-                      {% endif %}
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="inspector-{{version}}-schedule-type-2" name="inspector-{{version}}-schedule-type" type="radio" value="Accompanied"{% if item.proposedVisitType == "Accompanied" %} checked{% endif %}>
-                    <label class="govuk-label govuk-radios__label" for="inspector-{{version}}-schedule-type-2">
-                      Accompanied
-                      {% if item.proposedVisitType == "Accompanied" %}
-                        <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-3">Provisional type</strong>
-                      {% endif %}
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="inspector-{{version}}-schedule-type-3" name="inspector-{{version}}-schedule-type" type="radio" value="Unaccompanied"{% if item.proposedVisitType == "Unaccompanied" %} checked{% endif %}>
-                    <label class="govuk-label govuk-radios__label" for="inspector-{{version}}-schedule-type-3">
-                      Unaccompanied
-                      {% if item.proposedVisitType == "Unaccompanied" %}
-                        <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-3">Provisional type</strong>
-                      {% endif %}
-                    </label>
-                  </div>
-                </div>
+        {{ govukDateInput({
+          id: "inspector-"+version+"-schedule-date",
+          namePrefix: "inspector-"+version+"-schedule-date",
+          fieldset: {
+            legend: {
+              text: "Date of site visit",
+              classes: "govuk-fieldset__legend--m"
+            }
+          }
+        }) }}
 
-              </fieldset>
-            </div>
+        {% if data["inspector-"+version+"-schedule-type"] == "Access required" %}
+          {{ govukSelect({
+            id: "inspector-"+version+"-schedule-time",
+            name: "inspector-"+version+"-schedule-time",
+            label: {
+              text: "Time slot",
+              classes: "govuk-label--m"
+            },
+            items: [
+              {
+                value: "",
+                text: "Please select"
+              },
+              {
+                value: "8am to 10am",
+                text: "8am to 10am"
+              },
+              {
+                value: "9am to 11am",
+                text: "9am to 11am"
+              },
+              {
+                value: "10am to midday",
+                text: "10am to midday"
+              },
+              {
+                value: "11am to 1pm",
+                text: "11am to 1pm"
+              },
+              {
+                value: "midday to 2pm",
+                text: "midday to 2pm"
+              },
+              {
+                value: "1pm to 3pm",
+                text: "1pm to 3pm"
+              },
+              {
+                value: "2pm to 4pm",
+                text: "2pm to 4pm"
+              },
+              {
+                value: "3pm to 5pm",
+                text: "3pm to 5pm"
+              },
+              {
+                value: "4pm to 6pm",
+                text: "4pm to 6pm"
+              },
+              {
+                value: "5pm to 7pm",
+                text: "5pm to 7pm"
+              }
+            ]
+          }) }}
 
-          {% endif %}
-        {% endfor %}
+        {% endif %}
         
         {% set detailsHtml %}
           <table class="govuk-table">
