Change site visit details (AS-2517)

--- a/app/views/includes/inspector/v5/_site-visit.html
+++ b/app/views/includes/inspector/v5/_site-visit.html
@@ -1,8 +1,9 @@
-
 <div class="govuk-related-items">
+
   <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
     Site visit
   </h3>
+
   <!-- loop through data from availableAppeals.json -->
   {% for item in data['availableAppeals'] %}
     <!-- match selected appeal by ref in data and show -->
@@ -14,18 +15,18 @@
         <p class="govuk-body govuk-!-margin-bottom-1">
           {{ item.proposedVisitType }}
         </p>
-        <!--h4 class="govuk-heading-s govuk-!-margin-bottom-0">
-          Provisional site visit date
-        </h4>
-        <p class="govuk-body govuk-!-margin-bottom-1">
-          Week of {{ item.provisionalSiteVisit }}
-        </p-->
         {{ govukButton({
           href: "book-visit",
           text: "Book site visit",
           classes: "govuk-!-margin-top-3 govuk-!-margin-bottom-0"
         }) }}
       {% else %}
+        <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
+          Type
+        </h4>
+        <p class="govuk-body govuk-!-margin-bottom-1">
+          {{ item.siteVisitType }}
+        </p>
         <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
           Date
         </h4>
@@ -34,19 +35,22 @@
           {{ item.siteVisitDateMonth | formatShortMonth }}
           {{ item.siteVisitDateYear }}
         </p>
-        <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
-          Time
-        </h4>
-        <p class="govuk-body govuk-!-margin-bottom-1">
-          {{ item.siteVisitTime }}
-        </p>
-        <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
-          Type
-        </h4>
-        <p class="govuk-body govuk-!-margin-bottom-1">
-          {{ item.siteVisitType }}
-        </p>
+        {% if item.siteVisitType == "Access required" %}
+          <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
+            Time
+          </h4>
+          <p class="govuk-body govuk-!-margin-bottom-1">
+            {{ item.siteVisitTime }}
+          </p>
+        {% endif %}
+
+        {{ govukButton({
+          classes: "govuk-button--secondary govuk-!-margin-bottom-0 govuk-!-margin-top-5",
+          href: "/inspector/"+version+"/amend-visit",
+          text: "Amend site visit"
+        }) }}
       {% endif %}
     {% endif %}
   {% endfor %}
+
 </div>
