--- a/app/views/inspector/v5/amend-visit/check-confirm.html
+++ b/app/views/inspector/v5/amend-visit/check-confirm.html
@@ -13,7 +13,7 @@
   }) }}
   {{ govukBackLink({
     text: "Back",
-    href: "/inspector/"+version+"/book-visit/date-time"
+    href: "/inspector/"+version+"/amend-visit/date-time"
   }) }}
 {% endblock %}
 
@@ -83,7 +83,7 @@
           iconFallbackText: "Warning"
         }) }}
       {% endif %}
-
+      
       <form action="" method="post">
         <div class="govuk-button-group">
           {{ govukButton({
