--- a/app/views/inspector/v5/amend-visit/confirmation.html
+++ b/app/views/inspector/v5/amend-visit/confirmation.html
@@ -1,7 +1,7 @@
 {% extends "layouts/inspector/v5.html" %}
 
 {% block pageTitle %}
-  Site visit confirmed - My planning appeals
+  Site visit amended - My planning appeals
 {% endblock %}
 
 {% block beforeContent %}
