--- a/app/views/inspector/v5/amend-visit/index.html
+++ b/app/views/inspector/v5/amend-visit/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/inspector/v5.html" %}
 
 {% block pageTitle %}
-  Book site visit - My planning appeals
+  Amend site visit - My planning appeals
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,7 +13,7 @@
   }) }}
   {{ govukBackLink({
     text: "Back",
-    href: "/inspector/"+version+"/appeal-unscheduled"
+    href: "/inspector/"+version+"/appeal-scheduled"
   }) }}
 {% endblock %}
 
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">
-        Book site visit
+        Amend site visit
       </h1>
     </div>
   </div>
@@ -52,41 +52,32 @@
                 <div class="govuk-radios">
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="inspector-{{version}}-schedule-type" name="inspector-{{version}}-schedule-type" type="radio" value="Access required"
-                      {% if item.proposedVisitType == "Access required" %}
+                      {% if item.siteVisitType == "Access required" %}
                         checked
                       {% endif %}
                     >
                     <label class="govuk-label govuk-radios__label" for="inspector-{{version}}-schedule-type">
                       Access required
-                      {% if item.proposedVisitType == "Access required" %}
-                        <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-3">Provisional type</strong>
-                      {% endif %}
                     </label>
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="inspector-{{version}}-schedule-type-2" name="inspector-{{version}}-schedule-type" type="radio" value="Accompanied"
-                      {% if item.proposedVisitType == "Accompanied" %}
+                      {% if item.siteVisitType == "Accompanied" %}
                         checked
                       {% endif %}
                     >
                     <label class="govuk-label govuk-radios__label" for="inspector-{{version}}-schedule-type-2">
                       Accompanied
-                      {% if item.proposedVisitType == "Accompanied" %}
-                        <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-3">Provisional type</strong>
-                      {% endif %}
                     </label>
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="inspector-{{version}}-schedule-type-3" name="inspector-{{version}}-schedule-type" type="radio" value="Unaccompanied"
-                      {% if item.proposedVisitType == "Unaccompanied" %}
+                      {% if item.siteVisitType == "Unaccompanied" %}
                         checked
                       {% endif %}
                     >
                     <label class="govuk-label govuk-radios__label" for="inspector-{{version}}-schedule-type-3">
                       Unaccompanied
-                      {% if item.proposedVisitType == "Unaccompanied" %}
-                        <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-3">Provisional type</strong>
-                      {% endif %}
                     </label>
                   </div>
                 </div>
