Minor typo fix on inspector home screen

--- a/app/views/inspector/v5/index.html
+++ b/app/views/inspector/v5/index.html
@@ -106,7 +106,7 @@
                 </td>
                 <td class="govuk-table__cell" nowrap>
                   {% if item.siteVisitType != "Unaccompanied" %}
-                    {{ item.siteVisitTime }}
+                    {{ item.siteVisitTime | capitalize }}
                   {% endif %}
                 </td>
               </tr>
